--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "homepage":"https://mohamw25.github.io/e-commerce/",
   "name": "commerce",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
